@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.011
 
+- Fixed up the selftests in unix/selfpipe.c to work if additional file
+  descriptors are already opened.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
